--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <version>1.0.0</version>
   <description>The leptrino_force_torque package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="mahisorn.w@hiveground.com">Mahisorn Wongphati</maintainer>
@@ -39,12 +39,10 @@
   <!--   <run_depend>message_runtime</run_depend> -->
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
-  <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>rclcpp</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
+  <run_depend>rclcpp</run_depend>
   <run_depend>geometry_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
-
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
