Correcting packaging settings and launch file as py
As I test the package, I have corrected some build related settings. Also
made the launch file into python for more flexibility in ROS2 and corrected
node related things in the CPP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,4 +30,9 @@ add_executable(${PROJECT_NAME}
 
 ament_target_dependencies(${PROJECT_NAME} rclcpp geometry_msgs)
 
+install(TARGETS
+  ${PROJECT_NAME}
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 ament_package()
