--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>leptrino_force_torque</name>
   <version>1.0.0</version>
   <description>The leptrino_force_torque package</description>
@@ -41,8 +41,7 @@
   <!--   <test_depend>gtest</test_depend> -->
   <build_depend>rclcpp</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <run_depend>rclcpp</run_depend>
-  <run_depend>geometry_msgs</run_depend>
+  <build_depend>ament_cmake</build_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
@@ -50,6 +49,7 @@
     <!-- <metapackage/> -->
 
     <!-- Other tools can request additional information be placed here -->
+    <build_type>ament_cmake</build_type>
 
   </export>
 </package>
